Factions build for jitpack
From the factions3 project